            * /STARTMENUICON ..... install/remove start menu icon
            * /DESKTOPICON ....... install/remove desktop icon
            * /QUICKLAUNCHICON ... install/remove quick launch icon
    - one little bug causing log file path truncation in GUI was fixed
    - one bug causing infinite loops in volume optimization was fixed
    - progress percentage calculation was improved
    - Developers: winx_create_mutex, winx_open_mutex, winx_release_mutex,
      winx_destroy_mutex, winx_stristr functions added to zenwinx library
    - binary trees manipulation routines were added to zenwinx library;
      they're based on the GNU libavl red-black trees with parent pointers
    - winx_fbsize, winx_dfbsize, udefrag_fbsize, udefrag_dfbsize routines
      replaced by winx_bytes_to_hr, winx_hr_to_bytes, udefrag_bytes_to_hr,
      udefrag_hr_to_bytes routines in zenwinx and udefrag libraries
    - winx_exit_thread prototype changed by adding the exit status parameter
    - zenwinx_native_init and zenwinx_native_unload routines replaced
      by winx_init_library and winx_unload_library routines respectively
    - winx_init_failed and winx_kb_init routines added to zenwinx library
    - winx_init routine removed from zenwinx library
    - calling conventions removed from all the function prototypes
      in all the libraries

    beta3:
    - volume optimization reimplemented
    - quick volume optimization implemented
    - the cluster map now indicates unused map blocks with gray color
    - one bug preventing a proper redraw of defragmented files was fixed
    - few bugs causing infinite loops in defragmentation algorithm were fixed
    - one bug preventing MFT defragmentation was fixed
    - one bug preventing reports containing Asian characters in file names
      from being built was fixed
    - one bug preventing defragmentation in some cases on Windows NT 4.0
      and Windows 2000 was fixed
    - the documentation was updated to include better information about